<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConfigActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/activty_config_ipAddressTexView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activty_config_ipAddressTexView" />
        <EditText
            android:id="@+id/activty_config_ipAddressEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/activty_config_ipAddressEditText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/activty_config_portTexView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activty_config_portTexView" />

        <EditText
            android:id="@+id/activty_config_portEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="@string/activty_config_portEditText" />
    </LinearLayout>

    <Button
        android:id="@+id/activty_config_startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activty_config_startButton" />
</LinearLayout>